--- a/Css/styles.css
+++ b/Css/styles.css
@@ -1,20 +1,25 @@
-/* HEADER */
 .titulo{
-    height: 180px;
-}
-.titulo h1{
-    padding-top: 30px;
-} 
-
-/* CONTENIDO PRINCIPAL */
-.principal{
-    margin-top: 150px;
+    font-size: 100px;
 }
 
-.carousel-item{
-    height: 80vh;
+.titulo-producto{
+    font-size: 80px;
+    margin-top: 100px;
 }
 
-footer{
-    height: 200px;
+.titulo-box{
+    height: 250px;
+    padding-top: 20px;
+}
+
+/*CARDS*/
+.producto-card{
+    width: 350px;
+}
+
+.card-title{
+    font-size: 30px;
+}
+.btn-comprar{
+    padding: 10px;
 }
