--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -1,5 +1,5 @@
 
-$font-family-sans-serif: 'Oswald', sans-serif;
+$font-family-sans-serif: 'Ubuntu', sans-serif;
 
 $primary: #F0A500;
 $secondary: #E45826;
